# Data-Pipelines

./: .gitignore  MANIFEST.in  README.md  environment.yml  progress.txt  pyproject.toml  requirements.txt  setup.py  test.csv
candor_corpus/: README.md  candor_corpus.ipynb  extract.py  progress.txt
daily_dialogue/: download_huggingface.py
data_pipelines/: __init__.py  paths.py  utils.py
data_pipelines/datasets/: __init__.py  datasets.py  loaders.py  utils.py
data_pipelines/datasets/callfriend/: __init__.py  callfriend.py  download.py  loader.py  utils.py
data_pipelines/datasets/callhome/: __init__.py  callhome.py  download.py  loader.py  utils.py
data_pipelines/datasets/candor/: file_urls.txt
data_pipelines/datasets/daily_dialogue/: __init__.py  daily_dialog.py
data_pipelines/datasets/fisher/: __init__.py  fisher.py  loader.py  readers.py
data_pipelines/datasets/icc/: __init__.py  download.py  test_dl.py  test_metadata.json
data_pipelines/datasets/maptask/: __init__.py  constants.py  download.py  features.py  loader.py  maptask.py  utils.py
data_pipelines/datasets/switchboard/: __init__.py  isip.py  ldc.py  loader.py  progress.txt  readers.py  switchboard.py
data_pipelines/features/: __init__.py  opensmile.py  utils.py
maptask/: download.py  maptask_download_poc.ipynb  progress.txt
maptask/copied/scripts/: main.py  process.py  utils.py
maptask/copied/sh/: maptaskBuild-12410-Mon-May-9-2022.wget.sh
maptask/download/: utils.py
maptask/notebooks/: audio_features_poc.ipynb  skantze_pipeline_poc.ipynb
maptask/pipelines/skantze_2017/: README.txt
maptask/pipelines/skantze_2017/notebooks/: skantze_pipeline_poc.ipynb
maptask/refactored/scripts/: main.py  pipeline.py  utils.py
maptask/scripts/: process.py  vardefs.py
src/: utils.py
src/datasets/: utils.py
src/datasets/candor/: download.py
src/datasets/maptask/: .gitignore  __init__.py  download.py  features.py  maptask.py  progress.txt  utils.py
src/features/: opensmile.py  utils.py
switchboard-pipeline/: README.md  README.org  cha_to_csv.py  lc_cha.py  map_acts.py  merge.py  sentence_classification.py
switchboard-pipeline/msu_llc/: README.md  pipeline.py
switchboard-pipeline/msu_llc/shadow/: download.py
switchboard-pipeline/shadow/: merge.py  pipeline.py  preprocess_lc.py  utils.py
tests/: test_aws.py  test_paths.py
tests/datasets/: __init__.py  test_callfriend.py  test_callhome.py  test_daily_dialog.py  test_datasets.py  test_fisher.py  test_maptask.py  test_switchboard.py
tests/features/: __init__.py  test.csv  test_opensmile.py
tests/package/: test_datasets.py
(+35 files in other folders)
