[project]
name = "data_pipelines"
version = "0.0.1a"
authors = [
  { name="Muhammad Umair", email="umair.aarij@gmail.com" },
]
description = "Custom data pipeliens for use with machine learning projects"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'audiofile==1.1.0',
    'librosa==0.9.1',
    'matplotlib==3.5.2',
    'numpy==1.21.6',
    'pandas==1.4.2',
    'pydub==0.25.1',
    'pytest==7.1.2',
    'requests==2.27.1',
    'scikit_learn==1.1.1',
    'tensorflow==2.8.0',
    'tensorflow_datasets==4.5.2',
    'torch==1.11.0',
    'tqdm==4.64.0',
    'transformers==4.18.0',
    'datasets'
]


[project.urls]
"Homepage" = "https://github.com/mumair01/Data-Pipelines"
"Bug Tracker" = "https://github.com/mumair01/Data-Pipelines/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where=["data_pipelines"]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]