[project]
name = "data_pipelines"
version = "0.0.1a"
authors = [
  { name="Muhammad Umair", email="umair.aarij@gmail.com" },
]
description = "Custom data pipeliens for use with machine learning projects"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/mumair01/Data-Pipelines"
"Bug Tracker" = "https://github.com/mumair01/Data-Pipelines/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
    "ipython"
]


[tool.setuptools.packages.find]
where=["."]

# pyproject.toml
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]